--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,8 @@ build-backend = "poetry.core.masonry.api"
 addopts = "--tb=short"
 log_cli = true
 log_cli_level = "INFO"
+markers = [
+    "deprecated: Tests no longer used",
+    "smoke: Smoke tests",
+    "wip: Work In Progress",
+]
