--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,8 +1,8 @@
 name: Run tests
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '17 * * * *'
+#  schedule:
+#    - cron: '* 6 * * *'
 jobs:
   run-tests:
     runs-on: ubuntu-latest
@@ -26,5 +26,5 @@ jobs:
         shell: bash
         env:
           QA_USERNAME: ${{ env.USERNAME }}
-          QA_PASSWORD: ${{ env.PASSWORD }}
+          QA_PASSWORD: ${{ secrets.PASSWORD }}
           QA_BASE_URL: ${{ env.BASE_URL }}
